k8s-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: psql-service
spec:
  selector:
    app: psql-app
  ports:
  - port: 5432
    targetPort: 5432
