k8s-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
  labels:
    name: k8s-server-ingress
spec:
  rules:
  - host: k8s-server.localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: k8s-server-service
            port:
              number: 8080
